--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@ body {
   cursor: pointer;
 }
 
+
+
 .mapboxgl-popup {
   max-width: 200px;
 }
@@ -20,4 +22,89 @@ body {
 .mapboxgl-popup-content {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
+}
+
+
+#map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+/**
+* Set rules for how the map overlays
+* (info box and legend) will be displayed
+* on the page. */
+.poi-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  top: 10vh;
+  background: rgba(255, 255, 255, 0.8);
+  margin-left: 3vh;
+  font-family: Arial, sans-serif;
+  overflow: auto;
+  border-radius: 5px;
+  visibility: hidden;
+}
+
+.map-overlay {
+  position: absolute;
+  top:10vh;
+  height: 90vh;
+  width: 100vw;
+  /* bottom: 0;
+  left: 0;
+  top: 10vh;
+  background: rgba(255, 255, 255, 0.8);
+  margin-left: 20px;
+  font-family: Arial, sans-serif;
+  overflow: auto;
+  border-radius: 5px;
+  visibility: hidden; */
+}
+
+.header-overlay {
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 10vh;
+  background: rgb(255, 255, 255);
+  visibility: visible;
+}
+
+#poi-info {
+  position: absolute;
+  visibility: visible;
+  top: 0;
+  height: 84vh;
+  margin-top: 13vh;
+  margin-bottom: 3vh;
+  width: 30vw;
+}
+
+.poi-inner {
+  position: absolute;
+  margin-left: 5%;
+  width: 30vw;
+}
+
+#legend {
+  padding: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  line-height: 18px;
+  height: 150px;
+  margin-bottom: 40px;
+  width: 100px;
+}
+
+.legend-key {
+  position: absolute;
+  all: inherit;
+  display: inline-block;
+  border-radius: 20%;
+  width: 10px;
+  height: 10px;
+  margin-right: 5px;
 }
