--- a/src/index.css
+++ b/src/index.css
@@ -108,3 +108,23 @@ body {
   height: 10px;
   margin-right: 5px;
 }
+
+.activity-icon {
+  float: left;
+  width: 50px;
+}
+
+
+#trip-title {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 32px;
+  color: black;
+  margin: 5px;
+  /* -webkit-margin-before:0em;
+  -webkit-margin-after:0em; */
+
+}
+
+#trip-distance {
+  clear: both;
+}
