--- a/src/ActionSidebar.css
+++ b/src/ActionSidebar.css
@@ -4,11 +4,12 @@
     width: 50px;
     height: 50px;
     margin-top: 20px;
+    filter: drop-shadow(0px 0px 5px  #FFFFFF);
     
 }
 
 .actionMarker[data-activemode=true]{
-    filter: drop-shadow(0px 0px 5px  #0072BB);
+    filter: drop-shadow(0px 0px 15px  #0072BB);
 }
 .actionBarWrapper {
     position: relative;
@@ -18,4 +19,5 @@
 .pBetaLogo{
     font-size: 75px;
     margin-bottom:25px;
+    filter: drop-shadow(0px 0px 5px  #FFFFFF);
 }
