--- a/src/ActionSidebar.css
+++ b/src/ActionSidebar.css
@@ -9,15 +9,20 @@
 }
 
 .actionMarker[data-activemode=true]{
-    filter: drop-shadow(0px 0px 15px  #0072BB);
+    filter: drop-shadow(0px 0px 15px  #EF943E);
 }
 .actionBarWrapper {
     position: relative;
     top: 0;
     margin: 3vh;
+    float: left;
 }
 .pBetaLogo{
     font-size: 75px;
     margin-bottom:25px;
     filter: drop-shadow(0px 0px 5px  #FFFFFF);
+}
+.loginPromptModal{
+    float: left;
+    background: #FFFFFF;
 }
