--- a/src/POISidebar.css
+++ b/src/POISidebar.css
@@ -6,15 +6,10 @@ textarea {
     width:90%;
     font-family: 'Source Sans Pro', sans-serif;
 }
-
 #trip-title {
-  
   font-size: 32px;
   color: black;
   margin: 5px;
-  /* -webkit-margin-before:0em;
-  -webkit-margin-after:0em; */
-
 }
 
 /**
@@ -26,44 +21,37 @@ textarea {
     left: 0;
     width: 30vw;
     background: rgba(255, 255, 255, 0.9);
-    
     overflow-x: hidden;
-    visibility: hidden;
-  }
-  
-  .map-overlay {
-    top:10vh;
-    height: 90vh;
-    width: 100vw;
-    /* bottom: 0;
-    left: 0;
-    top: 10vh;
-    background: rgba(255, 255, 255, 0.8);
-    margin-left: 20px;
-    font-family: Arial, sans-serif;
-    overflow: auto;
-    border-radius: 5px;
-    visibility: hidden; */
-  }
-
-  #poi-info {
     position: absolute;
-    visibility: visible;
-    top: 5vh;
-    height: 90vh;
+    top: 0;
+    height: 100vh;
     border-radius: 0px 10px 10px 0px;
   }
-  
+
+  @media screen and (orientation:portrait) {
+    .poi-overlay {
+      bottom: 0;
+      left: 0;
+      width: 100vw;
+      background: rgba(255, 255, 255, 0.9);
+      overflow-x: hidden;
+      overflow-y: auto;
+      position: relative;
+      height: 40vh;
+      border-radius: 10px 10px 0px 0px;
+    }
+}
+
+
   .poi-inner {
     position: relative;
     margin: 5%;
   }
 
   .tripActions{
-    bottom: 0;
-    margin: 5%;
+    bottom: 28px;
+    margin: 2%;
     position: absolute;
-  
   }
 
 .buttonStyle{
