--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,12 @@ body {
 }
 
 .marker {
-  background-image: url('mapbox-icon.png');
+  background-image: url('checkerboard.png');
   background-size: cover;
-  width: 50px;
-  height: 50px;
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
+  border: 3px;
   cursor: pointer;
 }
 
