--- a/src/ActionSidebar.css
+++ b/src/ActionSidebar.css
@@ -5,7 +5,6 @@
     height: 50px;
     margin-top: 20px;
     filter: drop-shadow(0px 0px 5px  #FFFFFF);
-    
 }
 
 .actionMarker[data-activemode=true]{
@@ -22,7 +21,7 @@
     margin-bottom:25px;
     filter: drop-shadow(0px 0px 5px  #FFFFFF);
 }
-.loginPromptModal{
-    float: left;
-    background: #FFFFFF;
+
+.sidebar{
+    position: absolute;
 }
