--- a/src/POISidebar.css
+++ b/src/POISidebar.css
@@ -37,7 +37,23 @@ textarea {
 }
   .poi-inner {
     margin: 5%;
+    margin-top:0;
   }
+
+  @media screen and (orientation:portrait) {
+    #dragHeader {
+      z-index: 10;
+      width:50px;
+      height: 3px;
+      border-radius: 1px;
+      background-color: rgb(94, 94, 94);
+      display: inline-block;
+    }
+    #dragWrapper{
+      text-align: center;
+    }
+}
+ 
 
   .tripActions{
     bottom: 28px;
