--- a/src/POISidebar.css
+++ b/src/POISidebar.css
@@ -76,3 +76,10 @@ textarea {
     margin: 5px;
     font-size: 32px;
   }
+
+  html, body {
+    overflow: hidden;
+  }
+  body {
+    position: relative;
+  }
